Intends upper-left and upper-right to fix alignment issues
Aligns logo and utility area with content.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -868,7 +868,7 @@ sup
     background:$blue_darkest;
     //@include single-box-shadow($black_alpha40, 0px, 0px, 10px );
     border-bottom:1px solid $blue_midtone_alpha30;
-    padding:10px;
+    padding:15px;
     @include box-sizing(border-box);
 
     font-size:16px;
@@ -877,6 +877,7 @@ sup
     {
         font-size:20px;
         display:inline-block;
+        margin-left: 25px;
     }
 
     h2
@@ -884,14 +885,14 @@ sup
         color:$green_lightest;
         font-family: $san_serif_font;
         display:inline-block;
-        margin-left:20px;
+        margin-left:25px;
     }
 
     nav
     {
         position:absolute;
-        right:10px;
-        top:15px;
+        right:18px;
+        top:17px;
     }
 
     nav li
@@ -1143,7 +1144,7 @@ main
   {
     padding: 80px;
     text-align: center;
-    @include single-box-shadow($black_alpha40, 0px, 0px, 10px );
+    //@include single-box-shadow($black_alpha40, 0px, 0px, 10px );
     background: $blue_lightest;
     @include background( linear-gradient( $blue_lightest 0%, $blue_midtone 100%) );
     vertical-align: bottom;
